added shares block & more

--- a/marmelad/_blocks/card-project/card-project.styl
+++ b/marmelad/_blocks/card-project/card-project.styl
@@ -1,4 +1,9 @@
 .card-project
+  padding-bottom: 60px
+
+  @media (max-width: 1279)
+    padding-bottom: 30px
+
   &--new
     & ^[0]
       &__tag
@@ -55,7 +60,7 @@
     padding: 50px 50px 70px 50px
     box-shadow: 6px 15px 59px rgba(0, 0, 0, 0.08)
     border-radius: 55px
-    background-color: #FFFFFF
+    background-color: #FFF
     margin-top: 10px
     margin-left: auto
     margin-right: auto
