--- a/marmelad/_blocks/share-thumb/share-thumb.styl
+++ b/marmelad/_blocks/share-thumb/share-thumb.styl
@@ -1,1 +1,54 @@
-.share-thumb {}
+.share-thumb
+  width: 100%
+  display: flex
+
+  &__body
+    width: 100%
+    display: flex
+    flex-direction: column
+
+  &__img
+    overflow: hidden
+    border-radius: 10px
+    filter: drop-shadow(19px 19px 23px rgba(0, 0, 0, 0.07))
+    margin-bottom: 35px
+
+    @media (max-width: 767px)
+      margin-bottom: 20px
+
+    img
+      width: 100%
+      height: 100%
+      object-fit: cover
+      vertical-align: top
+
+  &__content
+    max-width: 430px
+    flex: 1 1 auto
+
+  &__name
+    font-size: 30px
+    color: #3D3D3D
+    font-weight: 500
+    line-height: 1.1
+    margin-bottom: 15px
+
+    @media (max-width: 767px)
+      font-size: 20px
+      margin-bottom: 10px
+
+  &__text
+    font-size: 18px
+    color: #A49777
+    font-weight: 500
+    line-height: 1.1
+    margin-bottom: 20px
+
+    @media (max-width: 767px)
+      margin-bottom: 10px
+
+  &__date
+    font-size: 20px
+    color: #ABABAB
+    font-weight: 500
+    line-height: 1
