--- a/marmelad/_blocks/shares-block/shares-block.styl
+++ b/marmelad/_blocks/shares-block/shares-block.styl
@@ -4,6 +4,10 @@
   @media (max-width: 1279px)
     padding-top: 30px
 
+  &__wrapper
+    @media (max-width: 639px)
+      padding-right: 15px
+
   &--type2
     padding-top: 60px
 
@@ -32,3 +36,42 @@
 
         &:last-child
           margin-bottom: 0
+
+  &__nav-slider
+    display: flex
+    align-items: center
+    margin-bottom: 30px
+
+    @media (max-width: 639px)
+      display: none
+
+    .swiper-button-next
+      margin-left: 15px
+
+    &:before
+      content: ''
+      flex: 1 1 700px
+      height: 1px
+      background-color: #E1D3B0
+      margin-right: 30px
+
+      @media (max-width: 1279px)
+        flex: 1 1 400px
+
+    &:after
+      content: ''
+      flex: 1 1 auto
+      height: 1px
+      background-color: #E1D3B0
+      margin-left: 30px
+
+  &__items
+    @media (max-width: 639px)
+      display: block
+
+  &__item
+    @media (min-width: 640px)
+      width: 570px
+
+    @media (max-width: 639px)
+      margin-bottom: 35px
