--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -264,3 +264,35 @@ p
 
     @media (max-width: 767px)
       margin-bottom: 20px
+
+.policy-block
+  padding-bottom: 140px
+
+  @media (max-width: 1279px)
+    padding-bottom: 70px
+
+  strong
+    font-size: 18px
+    color: #434343
+    font-weight: 700
+    line-height: 1.2
+    margin-top: 25px
+    margin-bottom: 25px
+    display: block
+
+  p
+    font-size: 14px
+    color: #929292
+    font-weight: 500
+    line-height: 1.3
+    margin-bottom: 15px
+
+    a
+      font-size: 14px
+      color: #929292
+      font-weight: 500
+      line-height: 1.1
+      text-decoration: none
+
+      &:hover
+        text-decoration: underline
