--- a/marmelad/_blocks/_layouts/app.html
+++ b/marmelad/_blocks/_layouts/app.html
@@ -22,6 +22,8 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
+        <script src="https://api-maps.yandex.ru/2.1/?apikey=&lang=ru_RU" type="text/javascript"></script>
+
         <link rel="stylesheet" href="css/plugins.min.css">
         <link rel="stylesheet" href="css/app.css">
 
@@ -56,7 +58,8 @@
 				smoothscroll: 'js/vendors/smoothscroll.polyfill-0.4.4.js',
 			}
 		</script>
-
+        
+        
         <script src="js/vendors/jquery-3.6.0.min.js"></script>
         <script src="js/plugins.min.js"></script>
         <script src="js/app.js"></script>
