--- a/marmelad/_blocks/delivery-block/delivery-block.styl
+++ b/marmelad/_blocks/delivery-block/delivery-block.styl
@@ -95,6 +95,13 @@
 
   &__map
     margin-top: 25px
+    border-radius: 25px
+    overflow: hidden
+    height: 365px
+
+    .ymaps-2-1-79-ground-pane
+      filter: url('data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\"><filter id=\"grayscale\"><feColorMatrix type=\"matrix\" values=\"0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\"/></filter></svg>#grayscale')
+      filter: grayscale(100%)
 
   &__bottom
     margin-top: 75px
