--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2093,6 +2093,15 @@ p {
 }
 .delivery-block__map {
   margin-top: 25px;
+  border-radius: 25px;
+  overflow: hidden;
+  height: 365px;
+  -webkit-overflow-scrolling: touch;
+}
+.delivery-block__map .ymaps-2-1-79-ground-pane {
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\"><filter id=\"grayscale\"><feColorMatrix type=\"matrix\" values=\"0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\"/></filter></svg>#grayscale");
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
 }
 .delivery-block__bottom {
   margin-top: 75px;
