--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2252,6 +2252,22 @@ p {
   line-height: 1.7;
   text-align: justify;
 }
+.feature-map {
+  padding-top: 30px;
+  padding-bottom: 60px;
+}
+.feature-map__head {
+  margin-bottom: 40px;
+}
+.feature-map__map {
+  width: 100%;
+  height: 510px;
+}
+.feature-map__map .ymaps-2-1-79-ground-pane {
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\"><filter id=\"grayscale\"><feColorMatrix type=\"matrix\" values=\"0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\"/></filter></svg>#grayscale");
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+}
 .filter-projects {
   padding-bottom: 30px;
 }
@@ -3603,6 +3619,9 @@ p {
   }
   .equipment-block__bottom {
     padding-top: 50px;
+  }
+  .feature-map {
+    padding-bottom: 30px;
   }
   .hero__section {
     background-position: 50% 190px;
